And then we could try un-breaking dark mode. I mean we could totally try that :D

--- a/src/_includes/css/theme-variables.css
+++ b/src/_includes/css/theme-variables.css
@@ -1,7 +1,7 @@
 /* Light Mode */
 :root {
-  /* see src/style.css
   --ifm-color-scheme: light;
+  /*
   --ifm-color-primary: #3578e5;
   --ifm-color-secondary: #ebedf0;
   --ifm-color-success: #00a400;
@@ -91,9 +91,7 @@
 
 /* Dark Mode */
 html[data-theme="dark"] {
-  /* see src/style.css 
   --ifm-color-scheme: dark;
-  */
   --ifm-color-emphasis-0: var(--ifm-color-gray-1000);
   --ifm-color-emphasis-100: var(--ifm-color-gray-900);
   --ifm-color-emphasis-200: var(--ifm-color-gray-800);
