--- a/src/style.css
+++ b/src/style.css
@@ -57,6 +57,15 @@ h1, h2, h3, h4, h5, h6 {
   margin: 1rem 0 0;
 }
 
+/* Wrapper or diagrams */
+
+.mermaid_wrapper {
+  background: #222;
+  border-radius: 1em;
+  margin: 1em 0;
+  padding: 1em;
+}
+
 /* Helper For Blog Images */
 .blog_image {
   max-height: 675px;
