feedback: put border around rating container

--- a/src/_components/feedback/style.css
+++ b/src/_components/feedback/style.css
@@ -2,6 +2,8 @@
   display: none;
   max-width: 550px;
   margin: 1.5em 0 1.5em;
+  border: 1px dashed var(--ifm-color-secondary);
+  border-radius: .45em;
 }
 
 #page-feedback img {
